--- a/yan/index.html
+++ b/yan/index.html
@@ -85,7 +85,7 @@
                   </div>
                 </div>
                 <div class="container">
-                  <div class="img-wrapper"><img src="profile-img-2.png" /></div>
+                  <div class="img-wrapper"><img src="src/shwan.png" /></div>
                   <div class="details">
                     <h3>Shwan Myat Nay Chi</h3>
                     <h5>Software Engineer</h5>
